<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TTPod</string>
    <string name="info_copyright">©PhotoMagic</string>

    <string name="action_settings">Settings</string>
    <string name="info_loading">Please wait...</string>
    <string name="title_yes">Yes</string>
    <string name="title_no">No</string>
    <string name="title_ok">OK</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_info">Information</string>
    <string name="title_options">Options</string>
    <string name="title_confirm">Confirm</string>
    <string name="title_warning">Warning</string>
    <string name="title_share">Share</string>
    <string name="title_back">Back</string>
    <string name="title_unknown">Unknown</string>
    <string name="title_timer">Timer</string>
    <string name="title_about_us">About Us</string>
    <string name="title_done">Done</string>

    <string name="format_song_selected">%1$s songs selected</string>
    <string name="info_press_again_to_exit">Press Back button again to quit app</string>

    <string name="info_add_favorite_done">Add to favorite list successfully</string>
    <string name="info_remove_favorite_done">Remove from favorite list successfully</string>
    <string name="info_playlist_name_existed">The playlist already exists. Please choose a new name.</string>

    <string name="title_recommended">Recommended songs</string>
    <string name="title_favorite">Favorite List</string>

    <string name="title_pause_all">Pause All</string>
    <string name="title_resume_all">Resume All</string>
    <string name="title_no_songs">No Songs found</string>
    <string name="title_enter_keyword">Please enter keyword to search</string>
    <string name="info_delete_song">Are you sure to remove the song?</string>
    <string name="info_delete_song_done">Song Deleted</string>

    <string name="title_categories">Categories</string>
    <string name="info_select_country">Select Country</string>
    <string name="title_add_playlist">Add Playlist</string>
    <string name="title_add_track">Add Songs</string>
    <string name="title_default_playlist">Favorite</string>
    <string name="title_select_playlist">Select Playlist</string>
    <string name="info_playlist_error">Playlist name can not be empty</string>

    <string name="info_delete_playlist">Are you sure to remove this playlist?</string>
    <string name="info_already_favorite">This song already exists in the favorite list</string>

    <string name="info_song_already_playlist">This song already exists in the playlist</string>
    <string name="info_add_track_playlist">Song Added</string>
    <string name="info_no_song_play">The playlist is empty, please add songs first.</string>
    <string name="info_save_all_done">Playlist saved</string>

    <string name="format_number_musics">%1$s songs</string>
    <string name="format_number_music">%1$s song</string>
    <string name="format_now_playing">Now Playing: %1$s/%2$s</string>

    <string name="title_songs">Songs</string>
    <string name="title_playlist">Playlist</string>
    <string name="title_hot_playlist">Top playlist</string>
    <string name="title_playlist_name">Playlist Name</string>

    <string name="title_settings">Settings</string>
    <string name="title_select_song">Select Song</string>

    <string name="title_save">Save</string>
    <string name="title_equalizer">Equalizer</string>
    <string name="title_custom">Custom</string>
    <string name="title_library">My Songs</string>
    <string name="info_rate_me">Rate the app</string>

    <string name="info_content_share">%1$s is an awesome music player app, check it out today!</string>
    <string name="title_plays">Plays</string>
    <string name="title_playing">Playing</string>
    <string name="format_created">Created: %1$s</string>
    <string name="title_tag">Tags</string>
    <string name="info_loading_more">Loading More...</string>

    <string name="info_delete_sound">Do you want to delete this song?</string>
    <string name="info_version_format">v%1$s</string>

    <string name="info_lose_internet">Please check your internet connection.</string>
    <string name="info_empty">Please enter the keyword</string>
    <string name="info_close_app">Do you want to quit the app?</string>
    <string name="info_server_error">Disconnected from server, please try again later.</string>

    <string name="menu_add_to_favorite">Add To Favorites</string>
    <string name="menu_remove_to_favorite">Remove From Favorites</string>
    <string name="menu_remove_to_playlist">Remove From Playlist</string>

    <string name="menu_add_to_playlist">Add To Playlist</string>
    <string name="menu_delete_song">Delete this song</string>
    <string name="menu_share">Share</string>
    <string name="info_play_song_error">Ops, this song has some issue, please try later.</string>

    <string name="format_current_song">Song : %1$s</string>
    <string name="format_current_singer">Author : %1$s</string>

    <string-array name="list_create_playlist">
        <item>Create playlist</item>
    </string-array>


    <string name="icon_play">&#xea7d;</string>
    <string name="icon_add">&#xea81;</string>
    <string name="icon_check">&#xe867;</string>
    <string name="icon_chevron_right">&#xe876;</string>
    <string name="icon_menu">&#xe8cf;</string>
    <string name="icon_pause">&#xea64;</string>

    <string name="info_error_sdcard">The app can not be launched, you might ran out of storage, do some clean up first.</string>
    <string name="format_app_name">%1$s v%2$s</string>
    <string name="info_visit_fb">Visit our fanpage</string>
    <string name="info_visit_website">Privacy Policy</string>
    <string name="info_send_email">Feedback</string>
    <string name="info_share">Share</string>
    <string name="info_share_app">Let start with %1$s now %2$s</string>
    <string name="title_refresh">Refresh</string>
    <string name="title_search_music">Search for songs</string>
    <string name="title_create">Create</string>
    <string name="info_add_playlist">Added %1$s to %2$s</string>
    <string name="info_nosong_playlist">The playlist is empty</string>

    <string name="title_play_all">Play all</string>
    <string name="title_rename_playlist">Rename playlist</string>
    <string name="title_delete_playlist">Delete playlist</string>


    <string name="title_grant">Grant</string>
    <string name="info_permission_denied">Sorry permission denied.We can not open this app on your device, please try again later.</string>
    <string name="format_request_permision">%1$s will need to have read/write permission your sdcard to save favorite, playlist data etc...Do you want to grant it for our apps now?</string>

    <string name="title_advertisement">Advertisement</string>
    <string name="title_bass">Bass</string>
    <string name="title_virtualizer">Virtualizer</string>
    <string name="title_reverb">Reverb</string>
    <string name="title_sleep_mode">Sleep Mode</string>
    <string name="title_off">OFF</string>

    <string name="format_minutes">%1$s minutes</string>
    <string name="format_minute">%1$s minute</string>
    <string name="title_now_playing">Now Playing</string>

    <string name="title_tab_top_charts">Trending</string>
    <string name="title_tab_discover">Genre</string>
    <string name="title_tab_my_music">My Songs</string>
    <string name="title_tab_my_playlist">Playlist</string>

    <string name="info_write_setting_permission">We need to have the write_setting permission to set ringtone or notification.Do you want to supply it now?</string>
    <string name="info_set_ringtone_successfully">Ringtone has been set.</string>
    <string name="info_set_notification_successfully">Notification has been set.</string>
    <string name="title_set_as_ringtone">Set As Ringtone</string>
    <string name="title_set_as_noti">Set As Notification</string>
    <string name="title_artist">Artist</string>
    <string name="title_song">Song</string>
    <string name="title_edit_song">Edit Song</string>
    <string name="lbl_welcome">Welcome!</string>
    <string name="lbl_welcome_message">TTPod Music is a Free Online Music Player with a song library of over 5,000,000 songs.

\n\nWhat can you do with TTPod Music?
\n- Search and play over 5,000,000 songs
\n- Create Playlist with local or online songs
\n- Setup timer for sleep mode
\n- Adjust sound effect using Equalizer
\n- Different Genres to choose
    </string>

    <string name="lbl_disclaimer">Disclaimer</string>
    <string name="lbl_disclaimer_message">We are NOT the Copyright Owners of any of the songs. The app uses \'SoundCloud\' Public API to stream music.</string>


</resources>