<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/title_search_music"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/action_sleep_mode"
        android:orderInCategory="100"
        android:title="@string/title_sleep_mode"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_equalizer"
        android:orderInCategory="100"
        android:title="@string/title_equalizer"
        app:showAsAction="never"/>

    <item android:id="@+id/action_rate_me"
          android:orderInCategory="100"
          android:title="@string/info_rate_me"
          app:showAsAction="never"/>

    <item android:id="@+id/action_contact_us"
          android:orderInCategory="100"
          android:title="@string/info_send_email"
          app:showAsAction="never"/>

    <item android:id="@+id/action_share"
          android:orderInCategory="100"
          android:title="@string/info_share"
          app:showAsAction="never"/>

    <item android:id="@+id/action_visit_website"
          android:orderInCategory="100"
          android:title="@string/info_visit_website"
          app:showAsAction="never"/>


</menu>