<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_add_playlist"
        android:orderInCategory="100"
        android:title="@string/menu_add_to_playlist"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_remove_from_playlist"
        android:orderInCategory="100"
        android:title="@string/menu_remove_to_playlist"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_edit_song"
        android:orderInCategory="100"
        android:title="@string/title_edit_song"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete_song"
        android:orderInCategory="100"
        android:title="@string/menu_delete_song"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_set_ringtone"
        android:orderInCategory="100"
        android:title="@string/title_set_as_ringtone"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_set_notification"
        android:orderInCategory="100"
        android:title="@string/title_set_as_noti"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/menu_share"
        app:showAsAction="never"/>
</menu>
