<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/lbl_welcome"
        android:textAlignment="center"
        android:textColor="@color/browser_actions_bg_grey"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_welcome_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="15dp"
        android:text="@string/lbl_welcome_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/tv_disclaimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/lbl_disclaimer"
        android:textAlignment="center"
        android:textColor="@color/browser_actions_bg_grey"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_disclaimer_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/lbl_disclaimer_message"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorAccent" />
</LinearLayout>